--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
       var redirectTo = window.location.pathname;
       localStorage.setItem('redirectTo', redirectTo);
       // 重定向到根路徑
-      window.location.replace('/');
+      window.location.replace('/twoshoulder');
     </script>
     <title>Page Not Found</title>
   </head>
