--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <script>
     // JavaScript 重定向，保持路由
     var pathname = window.location.pathname;
-    window.location.replace('/?' + pathname);
+    window.location.replace(pathname);
   </script>
   <title>Page Not Found</title>
 </head>
