--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=/record" />
+  <meta http-equiv="refresh" content="0; url=/" />
   <script>
     // JavaScript 重定向，保持路由
     var pathname = window.location.pathname;
-    window.location.replace(pathname);
+    window.location.replace("/");
   </script>
   <title>Page Not Found</title>
 </head>
