--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=/" />
+  <meta http-equiv="refresh" content="0; url=/twoshoulder" />
   <script>
     // JavaScript 重定向，保持路由
     var pathname = window.location.pathname;
-    window.location.replace("/");
+    window.location.replace("/twoshoulder");
   </script>
   <title>Page Not Found</title>
 </head>
